--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,8 +1,11 @@
+version: 0.2
+
 phases:
   build:
     commands:
       - echo "Target group: $DEPLOY_TARGET"
       - cp appspec/$DEPLOY_TARGET/appspec.yml appspec.yml
+
 artifacts:
   files:
     - '**/*'
